--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-native": "0.72.1",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
