--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0"
   },
